--- a/packages/clay-css/src/scss/cadmin/components/_custom-forms.scss
+++ b/packages/clay-css/src/scss/cadmin/components/_custom-forms.scss
@@ -164,6 +164,10 @@ label.custom-control-label {
 	@include clay-custom-control-variant($cadmin-custom-radio);
 }
 
+.custom-control-outside {
+	@include clay-custom-control-variant($cadmin-custom-control-outside);
+}
+
 // Custom Control Inline
 
 .custom-control-inline {
