--- a/packages/clay-css/src/scss/cadmin/variables/_dropdowns.scss
+++ b/packages/clay-css/src/scss/cadmin/variables/_dropdowns.scss
@@ -353,6 +353,11 @@ $cadmin-dropdown-section: map-deep-merge(
 		custom-control-label: $cadmin-dropdown-section-custom-control-label,
 		custom-control-label-text:
 			$cadmin-dropdown-section-custom-control-label-text,
+		custom-control-outside: (
+			label: (
+				padding-left: 28px,
+			),
+		),
 		active: (
 			custom-control-label:
 				$cadmin-dropdown-section-active-custom-control-label,
