--- a/packages/clay-css/src/scss/variables/_custom-forms.scss
+++ b/packages/clay-css/src/scss/variables/_custom-forms.scss
@@ -141,7 +141,7 @@ $custom-control-description-line-height: $custom-control-min-height !default;
 
 /// @deprecated as of v2.19.0 use the Sass map `$custom-control-label-text` instead
 
-$custom-control-description-padding-left: 0.5rem !default; // 8px
+$custom-control-description-padding-left: 0.5rem !default;
 
 /// @deprecated as of v2.19.0 use the Sass map `$custom-control-label-disabled` instead
 
@@ -530,6 +530,30 @@ $custom-radio: map-deep-merge(
 		),
 	),
 	$custom-radio
+);
+
+$custom-control-outside: () !default;
+$custom-control-outside: map-deep-merge(
+	(
+		label: (
+			display: block,
+			padding-left:
+				calc(
+					#{$custom-control-indicator-size} + #{$custom-control-description-padding-left}
+				),
+		),
+		custom-control-input: (
+			custom-control-label: (
+				before: (
+					position: absolute,
+				),
+			),
+		),
+		custom-control-label-text: (
+			padding-left: 0,
+		),
+	),
+	$custom-control-outside
 );
 
 // Custom Switch
